--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,7 @@ nav:
           - Apple und Foxconns Suizide: language/german/apple/text2.md   
         - Beim Bau der chinesischen Mauer:
           - I: language/german/beim_bau_der_chinesischen_mauer/text1.md
+          - II: language/german/beim_bau_der_chinesischen_mauer/text2.md
         - Öko und Welt:
           - Ökostrom - was der Umwelt wirklich nutzt: language/german/oeko/text1.md
 
