--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,10 +59,14 @@ nav:
         - Beim Bau der chinesischen Mauer:
           - I: language/german/beim_bau_der_chinesischen_mauer/text1.md
           - II: language/german/beim_bau_der_chinesischen_mauer/text2.md
+          - III: language/german/beim_bau_der_chinesischen_mauer/text3.md
         - Öko und Welt:
           - Ökostrom - was der Umwelt wirklich nutzt: language/german/oeko/text1.md
+        - Kultur:
+          - Über einige Merkmale westlicher Gesellschaft: language/german/kultur/text1.md
         - Politik:
           - Trägt Finnland zur Uniper-Rettung bei?: language/german/politik/text1.md
+          - Wo bleibt das Machtwort des Kanzlers?: language/german/politik/text2.md
 
 plugins:
   - search: 
