--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,10 @@ extra:
       name: GitHub | Adl3rAi
 
 nav:
+  - Algorithm:
+      - Data Structure:
+        - Linked List:
+          - 0 Single Linked List: algorithm/linked_list/single.md
   - History:
       - The Right Side of History:
         - 0 The pursuit of happiness: history/the_right_side_of_history/note1.md
