--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,6 +68,7 @@ nav:
           - I: language/german/beim_bau_der_chinesischen_mauer/text1.md
           - II: language/german/beim_bau_der_chinesischen_mauer/text2.md
           - III: language/german/beim_bau_der_chinesischen_mauer/text3.md
+          - IV: language/german/beim_bau_der_chinesischen_mauer/text4.md
         - Öko und Welt:
           - Ökostrom - was der Umwelt wirklich nutzt: language/german/oeko/text1.md
         - Kultur:
