--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,9 +45,9 @@ extra:
       name: GitHub | Adl3rAi
 
 nav:
-  - iOS-Dev:
-      - CS193p:
-        - Lecture 1: Getting started with SwiftUI: ios/cs193p/lec1.md
+  # - iOS-Dev:
+  #     - CS193p:
+  #       - Lecture 1: Getting started with SwiftUI: ios/cs193p/lec1.md
         # - Lecture 2: Learning more about SwiftUI: ios/cs193p/lec2.md
   - Algorithm:
       - Data Structure:
