--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,7 @@ nav:
           - 3 Sort Algorithm:
             - 0 Merge Sort: algorithm/tree/merge.md
             - 1 Quick Sort: algorithm/tree/quick.md
+          - 4 Lowest Common Ancestor: algorithm/tree/lca.md
   - History:
       - The Right Side of History:
         - 0 The pursuit of happiness: history/the_right_side_of_history/note1.md
