--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,6 +64,7 @@ nav:
           - 4 Lowest Common Ancestor: algorithm/tree/lca.md
         - Design:
           - 0 Least Recently Used(LRU) cache: algorithm/design/lru.md
+          - 2 Design Twitter: algorithm/design/twi.md
   - History:
       - The Right Side of History:
         - 0 The pursuit of happiness: history/the_right_side_of_history/note1.md
