--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,6 +64,7 @@ nav:
           - 4 Lowest Common Ancestor: algorithm/tree/lca.md
         - Design:
           - 0 Least Recently Used(LRU) cache: algorithm/design/lru.md
+          - 1 Least Frequently User(LFU) cache: algorithm/design/lfu.md
           - 2 Design Twitter: algorithm/design/twi.md
   - History:
       - The Right Side of History:
@@ -90,6 +91,7 @@ nav:
           - Trägt Finnland zur Uniper-Rettung bei?: language/german/politik/text1.md
           - Wo bleibt das Machtwort des Kanzlers?: language/german/politik/text2.md
           - Merkels Geschenk: language/german/politik/text3.md
+          - China nutzt Pelosi-Besuch als Vorwand: language/german/politik/text4.md
 
 plugins:
   - search: 
