--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,6 +92,7 @@ nav:
           - Wo bleibt das Machtwort des Kanzlers?: language/german/politik/text2.md
           - Merkels Geschenk: language/german/politik/text3.md
           - China nutzt Pelosi-Besuch als Vorwand: language/german/politik/text4.md
+          - 16 chinesische Kampfjets überqueren die Medianlinie: language/german/politik/text5.md
 
 plugins:
   - search: 
