--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,6 +93,8 @@ nav:
           - Merkels Geschenk: language/german/politik/text3.md
           - China nutzt Pelosi-Besuch als Vorwand: language/german/politik/text4.md
           - 16 chinesische Kampfjets überqueren die Medianlinie: language/german/politik/text5.md
+          - Befürchtete Eskalation im Taiwankonflikt - deutsche Außerpolitiker warnen vor katastrophalen Folge: language/german/politik/text6.md
+          - Und er kann doch lächeln: language/german/politik/text7.md
 
 plugins:
   - search: 
