--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,6 +95,7 @@ nav:
           - 16 chinesische Kampfjets überqueren die Medianlinie: language/german/politik/text5.md
           - Befürchtete Eskalation im Taiwankonflikt - deutsche Außerpolitiker warnen vor katastrophalen Folge: language/german/politik/text6.md
           - Und er kann doch lächeln: language/german/politik/text7.md
+          - Wirtschaftskrieg mit China wäre teuer: language/german/politik/text8.md
 
 plugins:
   - search: 
