--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ nav:
           - 1 Prefix Sum Array: algorithm/array/presum.md
           - 2 Difference Array: algorithm/array/diff.md
           - 3 2D Array Traverse: algorithm/array/2dtraverse.md
+          - 4 Sliding Window: algorithm/array/sliding.md
         - Linked List:
           - 0 Single Linked List: algorithm/linked_list/single.md
           - 1 Reverse Linked List: algorithm/linked_list/reverse.md
