--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,8 @@ nav:
           - 3 2D Array Traverse: algorithm/array/2dtraverse.md
           - 4 Sliding Window: algorithm/array/sliding.md
           - 5 Rabin-Karp Algorithm: algorithm/array/rk.md
+          - 6 Binary Search:
+            - 0 Basics: algorithm/array/bs.md
         - Linked List:
           - 0 Single Linked List: algorithm/linked_list/single.md
           - 1 Reverse Linked List: algorithm/linked_list/reverse.md
