--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,7 @@ nav:
           - 5 Rabin-Karp Algorithm: algorithm/array/rk.md
           - 6 Binary Search:
             - 0 Basics: algorithm/array/bs.md
+            - 1 Extremum: algorithm/array/extre.md
         - Linked List:
           - 0 Single Linked List: algorithm/linked_list/single.md
           - 1 Reverse Linked List: algorithm/linked_list/reverse.md
