--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,10 +45,14 @@ extra:
       name: GitHub | Adl3rAi
 
 nav:
-  - CS193p:
-    # - Lecture 1: Getting started with SwiftUI: ios/iosstanford/lec1.md
-    # - Lecture 2: Learning more about SwiftUI: ios/iosstanford/lec2.md
-    - Lecture 3: MVVM and the Swift type System: ios/iosstanford/lec3.md
+  - iOS:
+      - CS193p:
+        - 1 Getting started with SwiftUI: ios/iosstanford/lec1.md
+        - 2 Learning more about SwiftUI: ios/iosstanford/lec2.md
+        - 3 MVVM and the Swift type System: ios/iosstanford/lec3.md
+        - 4 Memorize Game Logic: ios/iosstanford/lec4.md
+        - 5 Properties Layout @ViewBuilder: ios/iosstanford/lec5.md
+        - 6 Protocols Shapes: ios/iosstanford/lec6.md
   - Algorithm:
       - Data Structure:
         - Array:
