--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -101,6 +101,8 @@ nav:
         - Öko und Welt:
           - Ökostrom - was der Umwelt wirklich nutzt: language/german/oeko/text1.md
           - Mehr Unabhängigkeit bei Kohle, Gas und Öl: language/german/oeko/text2.md
+        - Technologie:
+          - Werben für die Wechselbatterie: language/german/tech/text1.md
         - Kultur:
           - Über einige Merkmale westlicher Gesellschaft: language/german/kultur/text1.md
         - Politik:
