--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,6 +103,7 @@ nav:
           - Mehr Unabhängigkeit bei Kohle, Gas und Öl: language/german/oeko/text2.md
         - Technologie:
           - Werben für die Wechselbatterie: language/german/tech/text1.md
+          - Was Mecedes anders macht als Tesla: language/german/tech/text2.md
         - Kultur:
           - Über einige Merkmale westlicher Gesellschaft: language/german/kultur/text1.md
         - Politik:
