--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,6 +84,7 @@ nav:
           - 1 Least Frequently User(LFU) cache: algorithm/design/lfu.md
           - 2 Design Twitter: algorithm/design/twi.md
           - 3 Randomized Set: algorithm/design/random.md
+          - 4 Find Median from Data Stream: algorithm/design/median.md
   - History:
       - The Right Side of History:
         - 0 The pursuit of happiness: history/the_right_side_of_history/note1.md
