--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,6 +87,10 @@ nav:
           - 3 Randomized Set: algorithm/design/random.md
           - 4 Find Median from Data Stream: algorithm/design/median.md
           - 5 Next Greater Element with Stack: algorithm/design/nxtGreater.md
+          - 6 O(1) Maximum and Monotonic Queue: algorithm/design/slidingwin.md
+          - 7 Binary Heap designs Priority Queue: algorithm/design/pq.md
+          - 8 Implement Queues using Stacks: algorithm/design/s2q.md
+          - 9 Implement Stacks using Queues: algorithm/design/q2s.md
   - History:
       - The Right Side of History:
         - 0 The pursuit of happiness: history/the_right_side_of_history/note1.md
