--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,7 +134,7 @@ nav:
           - Wirtschaftskrieg mit China wäre teuer: language/german/politik/text8.md
           - Nachfrage nach Made in Germany sinkt: language/german/politik/text9.md
           - Erst das Geschäft, dann die Menschenrechte: language/german/politik/text10.md
-          - Wohngeldreform: Das plant die Bundesregierung: language/german/politik/text11.md
+          - Wohngeldreform Das plant die Bundesregierung: language/german/politik/text11.md
         - Politiksystem:
           - Aufgaben des Bundeskanzlers: language/german/politiksystem/text2.md
           - Wahl des Bundeskanzlers: language/german/politiksystem/text1.md
