--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,6 +98,8 @@ nav:
           - 0 Longest Increasing Subsequence(LIS): algorithm/dp/lis.md
           - 1 Distance of Two Strings: algorithm/dp/dst.md
           - 2 Longest Common Subsequence(LCS): algorithm/dp/lcs.md
+        - Maximum Subarray: algorithm/dp/maxsub.md
+        - Regular Expression Matching: algorithm/dp/regnex.md
   - History:
       - The Right Side of History:
         - 0 The pursuit of happiness: history/the_right_side_of_history/note1.md
