--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,6 +100,7 @@ nav:
           - 2 Longest Common Subsequence(LCS): algorithm/dp/lcs.md
         - Maximum Subarray: algorithm/dp/maxsub.md
         - Regular Expression Matching: algorithm/dp/regnex.md
+        - Stock Problem: algorithm/dp/stock.md
   - History:
       - The Right Side of History:
         - 0 The pursuit of happiness: history/the_right_side_of_history/note1.md
